# cheetah

./: .gitignore
boards/rebel/schema/: Rebel.pdsprj
rebel/: .editorconfig  CMakeLists.txt  CMakePresets.json  Makefile  README.md  avr-gcc-toolchain.cmake  motors.sim1  platformio.ini
rebel/apps/starter/lib/app/: CMakeLists.txt
rebel/apps/starter/lib/app/src/: main.cpp
rebel/boards/: emulation.resc.tpl
rebel/boards/habilis/: startup.s
rebel/boards/habilis/lib/board/: CMakeLists.txt
rebel/boards/habilis/lib/board/include/rebel/board/habilis/: i2c_bus.hpp
rebel/boards/habilis/lib/board/src/: board.cpp  i2c_bus.cpp
rebel/boards/habilis/lib/hal/: CMakeLists.txt
rebel/boards/habilis/lib/hal/include/rebel/hal/habilis/: i2c_bus.hpp
rebel/boards/habilis/lib/hal/src/: i2c_bus.cpp
rebel/boards/stm32f103/: board.resc  linker.ld  toolchain.cmake
rebel/boards/stm32f103/lib/hal/: CMakeLists.txt
rebel/boards/stm32f103/lib/hal/include/rebel/hal/stm32f103/: i2c_bus.hpp
rebel/boards/stm32f103/lib/hal/src/: i2c_bus.cpp
rebel/cars/: emulation.resc.tpl
rebel/cars/habilis/: CMakeLists.txt  README.md  board.resc  linker.ld  startup.s  toolchain.cmake
rebel/cars/habilis/include/rebel/habilis/car/: component_type.hpp  engine.hpp  habilis.hpp  rotation_direction.hpp
rebel/cars/habilis/include/rebel/habilis/toolkit/: store.hpp
rebel/cars/habilis/lib/car/: CMakeLists.txt
rebel/cars/habilis/lib/car/include/rebel/car/habilis/: bus.hpp  component.hpp  component_type.hpp  engine.hpp  engine_loopback.hpp  engine_loopless.hpp  habilis.hpp  i2c_bus.hpp
rebel/cars/habilis/lib/car/src/: car.cpp  car_factory.cpp  engine.cpp  engine_loopback.cpp  engine_loopless.cpp  habilis.cpp  i2c_bus.cpp
rebel/cars/habilis/lib/habilis/: CMakeLists.txt
rebel/cars/habilis/lib/habilis/include/rebel/habilis/car/: bus.hpp  component.hpp  engine_driver.hpp  engine_loopback.hpp  engine_loopless.hpp  engine_sensor.hpp  habilis.hpp  i2c.hpp  i2c_bus.hpp
rebel/cars/habilis/lib/habilis/include/rebel/habilis/toolkit/: logger.hpp  usart_logger.hpp
rebel/cars/habilis/lib/habilis/src/: isr.cpp
rebel/cars/habilis/lib/habilis/src/car/: car_factory.cpp  habilis.cpp  i2c_bus.cpp  isr.cpp
rebel/cars/habilis/lib/habilis/src/toolkit/: logger.cpp  store.cpp  usart_logger.cpp
rebel/cars/habilis/schema/proteus/: v0.pdsprj
rebel/cars/habilis/src/: isr.cpp  startup.s
rebel/cars/habilis/src/car/: car_factory.cpp  engine.cpp  engine_loopback.cpp  engine_loopless.cpp  habilis.cpp  i2c.cpp
rebel/cars/habilis/src/toolkit/: store.cpp
rebel/cars/sketch/schema/qucs/: pwm.sch
rebel/cars/v0/schema/proteus/: v0.pdsprj
rebel/lib/app/: CMakeLists.txt
rebel/lib/app/include/rebel/app/: main.hpp
rebel/lib/app/src/: main.cpp
rebel/lib/board/: CMakeLists.txt
rebel/lib/board/include/rebel/board/: board.hpp  bus.hpp  component.hpp  component_registry.hpp  component_type.hpp
rebel/lib/board/src/: board.cpp  component_registry.cpp
rebel/lib/car/: CMakeLists.txt  library.json  platformio.ini
rebel/lib/car/include/: car.h  engine.h  engine_driver.h  engine_loopback.h  engine_loopless.h  engine_sensor.h  rotation_direction.h
rebel/lib/car/include/rebel/car/: car.h  car.hpp  car_factory.hpp  engine.h  engine.hpp  engine_driver.h  engine_driver.hpp  engine_loopback.h  engine_loopback.hpp  engine_loopless.h  engine_loopless.hpp  engine_sensor.h  engine_sensor.hpp  rotation_direction.h  rotation_direction.hpp
rebel/lib/car/src/: car.c  car.cpp  car_factory.cpp  engine.cpp  engine_loopback.cpp  engine_loopless.cpp
rebel/lib/car/test/: test_car.c  test_car.cpp
rebel/lib/hal/: CMakeLists.txt
rebel/lib/hal/include/rebel/hal/: bus.hpp
rebel/lib/hw/: library.json  platformio.ini
rebel/lib/hw/include/: bus.h  i2c_bus.h  pwm_on_bus.h
rebel/lib/hw/src/: bus.cpp  i2c_bus.cpp  pwm_on_bus.cpp
rebel/lib/hw/test/: test_hw.cpp
rebel/lib/i2c/include/: i2c.h
rebel/lib/i2c/src/: i2c.c
rebel/lib/toolkit/: CMakeLists.txt
rebel/lib/toolkit/include/rebel/toolkit/: logger.hpp  store.hpp
rebel/lib/toolkit/src/: toolkit.cpp
rebel/schema/: pwm.dpl  v3.pdsprj  v4.pdsprj
rebel/scripts/: release.py
rebel/src/: avr.cpp  main.c  main.cpp  usart.cpp
rebel/test/: test_main.c  test_main.h
rebel/test/native/test_hil/: hil.cpp
schema/: engine.pdsprj
